--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -18,11 +18,13 @@
   </div>
 
 
-<div class="footer"><ul>
-  <li><img src="" alt=""></li>
-  <li><img src="" alt=""></li>
-  <li><img src="" alt=""></li>
-  <li><img src="" alt=""></li>
-</ul></div>
+  <div class="footer">
+      <div class="icon">
+        <img src="../../../assets/image/footer/facebook.png" alt="">
+          <img src="../../../assets/image/footer/insta.png" alt="">
+          <img src="../../../assets/image/footer/youtube.png" alt="">
+          <img src="../../../assets/image/footer/twitter.png" alt="">
+       </div>
+  </div>
 
 </div>
