--- a/src/app/components/header/bag/bag.component.less
+++ b/src/app/components/header/bag/bag.component.less
@@ -5,6 +5,7 @@
     position: fixed;
     left: 0;
     top: 0;
+    z-index: 200;
     width: 100vw;
     height: calc(~'100vh -100px');
     // background: red;
