--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -4,19 +4,28 @@
   display: flex;
   justify-content: space-between;
   line-height: 100px;
+  position: fixed;
+  left: 0;
+  top: 0;
+  z-index: 100;
   background: #fff;
 }
 .header-logo {
-  width: 30%;
+  width: 20%;
   display: flex;
+  color: #C3A67C;
 }
 .header-nav ul {
   display: flex;
+  justify-content: space-around;
+  width: 500px;
 }
 .header-nav ul li {
-  margin-left: 100px;
   list-style-type: none;
   text-transform: uppercase;
+}
+.header-nav ul li:first-child a {
+  color: #C3A67C;
 }
 .header-nav ul li a {
   text-decoration: none;
@@ -26,7 +35,17 @@
   color: #C3A67C;
   cursor: pointer;
 }
+.header .login {
+  width: 150px;
+}
+.header .login p {
+  display: inline;
+}
 .header-bag {
-  width: 140px;
-  background: #0f0;
+  width: 100px;
+  background-image: url(../../../assets/image/header/bag.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  text-align: center;
+  line-height: 115px;
 }
