--- a/src/app/components/header/header.component.less
+++ b/src/app/components/header/header.component.less
@@ -6,20 +6,28 @@
     display: flex;
     justify-content: space-between;
     line-height: 100px;
-    // position: sticky;
+    position: fixed;
+    left: 0;top: 0;
+    z-index: 100;
     background:#fff;
     &-logo{
-        width: 30%;
+        width: 20%;
         display: flex;
-
+        color: @nav-text-color-hover
     }
     &-nav{
 
         ul{
             display: flex;
-            
+            justify-content: space-around;
+            width: 500px;
             li{
-                margin-left: 100px;
+                &:first-child{
+                    a{
+
+                        color: @nav-text-color-hover
+                    }
+                }
                 list-style-type: none;
                 text-transform: uppercase;
                 a{
@@ -30,11 +38,22 @@
                         cursor: pointer;
                     }
                 }
+                
             }
         }
     }
+    .login{
+        width: 150px;
+        p{
+            display: inline;
+        }
+    }
     &-bag{
-        width: 140px;
-        background: #0f0;
+        width: 100px;
+        background-image: url(../../../assets/image/header/bag.png);
+        background-repeat: no-repeat;
+        background-position: center;
+        text-align: center;
+        line-height: 115px;
     }
 }
