--- a/src/app/components/main/main.component.less
+++ b/src/app/components/main/main.component.less
@@ -17,7 +17,7 @@
         &-description{
             width: 50%;
             height:  100%;
-            background: #f00;
+            background: #ffffff;
             h3{
                 margin: 60px;
                 margin-top: 100px;
@@ -50,6 +50,17 @@
     .footer{
         height: 100px;
         background-color:@nav-text-color-hover;
-
+        display: flex;
+        justify-content: center;
+        .icon{
+        display: flex;
+            justify-content: space-around;
+            align-items: center;
+            width: 400px;
+            img{
+                height: 50px;
+                width: 50px;
+            }
+        }   
     }
 }
