--- a/src/app/components/shop/shop.component.less
+++ b/src/app/components/shop/shop.component.less
@@ -35,6 +35,11 @@
         flex-wrap: wrap;
         justify-content:space-around;
         .items{
+            .card{
+                img{
+                    width: 300px;
+                }
+            }
             margin: 20px;    
         }
     }
