--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-@import "../node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css";
+/* @import "../node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css"; */
