add style for filter and contanComponent. Add db for items

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
-<app-header></app-header>
-<router-outlet style="z-index: 0 !important;"></router-outlet>
+<div class="header">
+    <app-header></app-header>
+</div>
+<router-outlet></router-outlet>
