--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -1,4 +1,26 @@
-<p>
-  contact works!
-</p>
-  
+
+<div class="container">
+  <h1>Наші контакти</h1> 
+  <div class="info">
+    <div class="ourStore">
+      <img src="" alt="">
+      <h2>Місце знаходження</h2>
+      <p>Львів</p>
+      <p>вул. Івана Франка 61</p>
+      <p>logos@gmail.com | +380-123-45-67-89</p>
+    </div>
+    <div class="opening">
+      <img src="" alt="">
+      <h2>Час відкриття</h2>
+      <p>Понеділок- П'ятниця: 11:00-21:00</p>
+      <p>Субота : 11:00-18:00</p>
+      <p>Неділя : Вихідний</p>
+    </div>
+  </div>
+  <div class="map">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d2500.290856972454!2d24.035196703069797!3d49.832029296659684!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1suk!2sua!4v1529308394719" width="75%" height="500px" frameborder="0" style="border:0" allowfullscreen></iframe>
+  </div>
+
+
+
+</div>
