--- a/src/app/components/login/login.component.less
+++ b/src/app/components/login/login.component.less
@@ -1,3 +1,4 @@
+@colorOr:#C3A67C;
 body{
     position: relative;
 } 
@@ -10,14 +11,14 @@ body{
     height: 300px;
     display: flex;
     flex-direction: column;
-    background: rgba(255,255,255,0.8);
+    background: rgba(255,255,255,0.9);
     padding: 40px;
     justify-content: space-around;
 
 
     span{
         text-transform: uppercase;
-        color: crimson;
+        color: @colorOr;
         font-weight: 900;
         margin:3px ;
         text-align: center;
