--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -10,13 +10,13 @@ body {
   height: 300px;
   display: flex;
   flex-direction: column;
-  background: rgba(255, 255, 255, 0.8);
+  background: rgba(255, 255, 255, 0.9);
   padding: 40px;
   justify-content: space-around;
 }
 .container span {
   text-transform: uppercase;
-  color: crimson;
+  color: #C3A67C;
   font-weight: 900;
   margin: 3px ;
   text-align: center;
